--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.0",
     "next": "12.0.4",
+    "postcss": "^8.4.4",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-syntax-highlighter": "^15.4.5",
+    "sass": "1.43.4",
+    "tailwindcss": "^2.2.19"
   },
   "devDependencies": {
     "eslint": "7",
